fail_crate/tests/empty_main_new.rs
use inew::New;

#[derive(New)]
#[new()]
struct A;

fn main() {}
